Add some rxjs utils

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -61,21 +61,20 @@
         "rxjs/finnish": [
           "error",
           {
-              "functions": true,
-              "methods": true,
-              "names": {
-                  "^(canActivate|canActivateChild|canDeactivate|canLoad|intercept|resolve|validate)$": false
-              },
-              "parameters": true,
-              "properties": true,
-              "strict": false,
-              "types": {
-                  "^EventEmitter$": false
-              },
-              "variables": true
+            "functions": false,
+            "methods": false,
+            "names": {
+              "^(canActivate|canActivateChild|canDeactivate|canLoad|intercept|resolve|validate)$": false
+            },
+            "parameters": true,
+            "properties": true,
+            "strict": true,
+            "types": {
+              "^EventEmitter$": false
+            },
+            "variables": true
           }
-      ]
-
+        ]
       }
     },
     {
