--- a/angular.json
+++ b/angular.json
@@ -41,6 +41,7 @@
               "projects/web/src/assets"
             ],
             "styles": [
+              "projects/web/src/custom-theme.scss",
               "projects/web/src/styles.css"
             ],
             "scripts": [],
@@ -105,6 +106,7 @@
               "projects/web/src/assets"
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/indigo-pink.css",
               "projects/web/src/styles.css"
             ],
             "scripts": []
