--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "start": "NG_APP_ENV=development ng serve --configuration development --project web",
+    "start:prod": "NG_APP_ENV=production ng serve --configuration development --project web",
+    "build": "npm run build:prod",
+    "build:dev": "NG_APP_ENV=development ng build --configuration development --project web",
+    "build:prod": "NG_APP_ENV=production ng build --configuration production --project web",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint"
@@ -24,6 +27,7 @@
     "@angular/platform-server": "^17.0.0",
     "@angular/router": "^17.0.0",
     "@angular/ssr": "^17.0.0",
+    "@ngx-env/builder": "^17.3.0",
     "eslint-plugin-rxjs": "^5.0.3",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
