--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 NG_APP_VERSION=$npm_package_version
 NG_APP_COMMIT=$GITHUB_SHA
-NG_APP_API_URL="https://api.elcon.saritasa.rocks/api/v1/"
+NG_APP_API_URL="http://localhost:8000/"
 
 NG_APP_GOOGLE_CLIENT_ID=12392129081-ivvtgm8i2c1p5u97ugtldrn1q63v5okv.apps.googleusercontent.com
