--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "NG_APP_ENV=development ng serve --configuration development --project web",
-    "start:prod": "NG_APP_ENV=production ng serve --configuration development --project web",
+    "nx": "nx",
+    "start": "NG_APP_ENV=development nx serve --configuration development --project web",
+    "start:prod": "NG_APP_ENV=production nx serve --configuration development --project web",
     "build": "npm run build:prod",
-    "build:dev": "NG_APP_ENV=development ng build --configuration development --project web",
-    "build:prod": "NG_APP_ENV=production ng build --configuration production --project web",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "lint": "ng lint"
+    "build:dev": "NG_APP_ENV=development nx build --configuration development --project web",
+    "build:prod": "NG_APP_ENV=production nx build --configuration production --project web",
+    "watch": "nx build --watch --configuration development",
+    "test": "nx test",
+    "lint": "nx lint"
   },
   "private": true,
   "dependencies": {
@@ -27,6 +28,7 @@
     "@angular/platform-server": "^17.3.9",
     "@angular/router": "^17.3.9",
     "@angular/ssr": "^17.3.7",
+    "@nrwl/workspace": "^19.1.0",
     "eslint-plugin-rxjs": "^5.0.3",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
@@ -36,6 +38,8 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.3.7",
+    "@angular-devkit/core": "^17.3.7",
+    "@angular-devkit/schematics": "^17.3.7",
     "@angular-eslint/builder": "17.0.1",
     "@angular-eslint/eslint-plugin": "17.0.1",
     "@angular-eslint/eslint-plugin-template": "17.0.1",
@@ -44,6 +48,9 @@
     "@angular/cli": "^17.3.7",
     "@angular/compiler-cli": "^17.3.9",
     "@ngx-env/builder": "^17.3.0",
+    "@nx/angular": "17.0.3",
+    "@nx/workspace": "17.0.3",
+    "@schematics/angular": "^17.3.7",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
@@ -57,6 +64,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "ng-packagr": "^17.0.0",
+    "nx": "17.0.3",
     "typescript": "~5.2.2"
   }
 }
