Add scss to generator option

--- a/angular.json
+++ b/angular.json
@@ -10,7 +10,8 @@
           "skipTests": true,
           "displayBlock": true,
           "skipImport": true,
-          "changeDetection": "OnPush"
+          "changeDetection": "OnPush",
+          "style": "scss"
         },
         "@schematics/angular:directive": {
           "skipTests": true
