--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "build:prod": "NG_APP_ENV=production ng build --configuration production --project web",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "lint:fix": "ng lint --cache --fix && npm run prettier:fix",
+    "prettier": "prettier --check projects/**/*.{html,*css}",
+    "prettier:fix": "prettier --write projects/**/*.{html,*css}"
   },
   "private": true,
   "dependencies": {
@@ -50,6 +53,11 @@
     "@typescript-eslint/eslint-plugin": "6.10.0",
     "@typescript-eslint/parser": "6.10.0",
     "eslint": "^8.53.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsdoc": "^48.2.7",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-prettier": "^5.1.3",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
@@ -57,6 +65,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "ng-packagr": "^17.0.0",
+    "prettier": "^3.3.0",
     "typescript": "~5.2.2"
   }
 }
