--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
   "root": true,
   "ignorePatterns": ["projects/*/src/index.html"],
+  "parser": "@typescript-eslint/parser",
   "overrides": [
     {
       "files": ["*.ts"],
@@ -17,7 +18,6 @@
         "plugin:import/warnings",
         "plugin:import/typescript",
         "plugin:jsdoc/recommended",
-        "plugin:prefer-arrow/recommended",
         "plugin:prettier/recommended"
       ],
       "plugins": [
@@ -25,15 +25,16 @@
         "@typescript-eslint",
         "import",
         "jsdoc",
-        "prefer-arrow",
         "prettier"
       ],
       "rules": {
         "import/order": "error",
+        "import/no-unresolved": "off",
+        "jsdoc/require-returns": "off",
         "jsdoc/check-alignment": "error",
         "jsdoc/check-indentation": "error",
-        "jsdoc/newline-after-description": "error",
-        "prefer-arrow/prefer-arrow-functions": "error",
+        "jsdoc/require-param-type": "off",
+        "jsdoc/check-tag-names": "off",
         "prettier/prettier": "error",
         "@typescript-eslint/explicit-member-accessibility": "error",
         "@typescript-eslint/unbound-method": "off",
