--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "build:prod": "NG_APP_ENV=production ng build --configuration production --project web",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "ng lint",
-    "lint:fix": "ng lint --cache --fix && npm run prettier:fix",
-    "prettier": "prettier --check projects/**/*.{html,*css}",
-    "prettier:fix": "prettier --write projects/**/*.{html,*css}"
+    "lint": "ng lint --cache && npm run stylelint && npm run prettier",
+    "lint:fix": "ng lint --cache --fix && npm run stylelint:fix && npm run prettier:fix",
+    "prettier": "prettier --check projects/**/*.{html,*scss}",
+    "prettier:fix": "prettier --write projects/**/*.{html,*scss}",
+    "stylelint": "stylelint projects/**/*.*scss",
+    "stylelint:fix": "stylelint --cache --fix projects/**/*.*scss "
   },
   "private": true,
   "dependencies": {
@@ -65,6 +67,9 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "ng-packagr": "^17.0.0",
     "prettier": "^3.3.0",
+    "stylelint": "^16.6.1",
+    "stylelint-config-recommended-scss": "^14.0.0",
+    "stylelint-config-standard": "^36.0.0",
     "typescript": "~5.2.2"
   }
 }
