--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,8 @@
 {
   "singleQuote": true,
   "trailingComma": "all",
-  "printWidth": 80,
+  "printWidth": 120,
+  "endOfLine": "lf",
   "tabWidth": 2,
   "semi": true
 }
