--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,7 @@
       ],
       "rules": {
         "import/order": "error",
+        "no-console": ["error", { "allow": ["warn", "error"] }],
         "import/no-unresolved": "off",
         "jsdoc/require-returns": "off",
         "jsdoc/check-alignment": "error",
