--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -46,6 +46,7 @@
         "@typescript-eslint/no-unsafe-enum-comparison": "off",
         "@typescript-eslint/no-unsafe-member-access": "off",
         "@typescript-eslint/no-unsafe-call": "off",
+        "@typescript-eslint/no-misused-promises": "off",
         "@typescript-eslint/no-unused-vars": [
           "error",
           {
