--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -47,6 +47,7 @@
         "@typescript-eslint/no-unsafe-member-access": "off",
         "@typescript-eslint/no-unsafe-call": "off",
         "@typescript-eslint/no-misused-promises": "off",
+        "@typescript-eslint/no-floating-promises":"off",
         "@typescript-eslint/no-unused-vars": [
           "error",
           {
