--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@angular/ssr": "^17.3.7",
     "eslint-plugin-rxjs": "^5.0.3",
     "express": "^4.18.2",
+    "ngx-editor": "^17.5.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zod": "^3.23.8",
