--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-rxjs": "^5.0.3",
     "express": "^4.18.2",
     "ngx-quill": "^25.3.2",
+    "quill-image-resizor": "^1.3.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zod": "^3.23.8",
