--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@angular/ssr": "^17.3.7",
     "eslint-plugin-rxjs": "^5.0.3",
     "express": "^4.18.2",
+    "luxon": "^3.5.0",
     "ngx-quill": "^25.3.2",
     "quill-image-resizor": "^1.3.0",
     "rxjs": "~7.8.0",
@@ -53,6 +54,7 @@
     "@ngx-env/builder": "^17.3.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/luxon": "^3.4.2",
     "@types/node": "^18.18.0",
     "@typescript-eslint/eslint-plugin": "6.10.0",
     "@typescript-eslint/parser": "6.10.0",
