--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@ngx-env/builder": "^17.3.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/lodash": "^4.17.7",
     "@types/luxon": "^3.4.2",
     "@types/node": "^18.18.0",
     "@typescript-eslint/eslint-plugin": "6.10.0",
