--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build:prod": "NG_APP_ENV=production ng build --configuration production --project web",
     "watch:dev": "NG_APP_ENV=development ng build --watch --configuration development --project web",
     "test": "ng test",
+    "preview": "angular-http-server --path dist/web/browser",
     "lint": "ng lint --cache && npm run stylelint && npm run prettier",
     "lint:fix": "ng lint --cache --fix && npm run stylelint:fix && npm run prettier:fix",
     "prettier": "prettier --check projects/**/*.{html,*scss}",
@@ -59,6 +60,7 @@
     "@types/node": "^18.18.0",
     "@typescript-eslint/eslint-plugin": "6.10.0",
     "@typescript-eslint/parser": "6.10.0",
+    "angular-http-server": "^1.12.0",
     "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
